Index and image
posting both

--- a/index.html
+++ b/index.html
@@ -399,14 +399,14 @@ Presented strategic plan on how to leverage private funds, investment and mentor
 
 <div class="span4">
                 <ul id="bl-work-items" style="list-style: none;">
-                  <li data-panel="panel-15" class="item" data-id="id-12" data-tag="website" data-type="web"><a href="#"><img src="images/Community_Well.png" width="281px" height="191px" /><center><p>Community Well</p></center></a></li>
+                  <li data-panel="panel-15" class="item" data-id="id-15" data-tag="website" data-type="web"><a href="#"><img src="images/Community_Well.png" width="281px" height="191px" /><center><p>Community Well</p></center></a></li>
                 </ul>
                 <!--<p>Hipster Unite</p>-->    
               </div><!-- /span4 -->
 
 <div class="span4">
                 <ul id="bl-work-items" style="list-style: none;">
-                  <li data-panel="panel-17" class="item" data-id="id-12" data-tag="website" data-type="web"><a href="#"><img src="images/blank.png" width="281px" height="191px" /><center><p>  </p></center></a></li>
+                  <li data-panel="panel-17" class="item" data-id="id-17" data-tag="website" data-type="web"><a href="#"><img src="images/blank.png" width="281px" height="191px" /><center><p>Place Holder</p></center></a></li>
                 </ul>
                 <!--<p>Hipster Unite</p>-->    
               </div><!-- /span4 -->
@@ -436,12 +436,19 @@ Presented strategic plan on how to leverage private funds, investment and mentor
                 <ul id="bl-work-items" style="list-style: none;">
                   <li data-panel="panel-13" class="item" data-id="id-13" data-tag="website" data-type="map"><a href="#"><img src="images/Dasymetric_SidebySide.png" width="281px" height="191px" /><center><p>Mosswood Park Access</p></center></a></li>
                 </ul>
-                <!--<p>Hipster Unite</p>-->    
+                <!--<p>Mosswood Park Access</p>-->    
               </div><!-- /span4 -->
 
               <div class="span4">
                 <ul id="bl-work-items" style="list-style: none;">
                   <li data-panel="panel-14" class="item" data-id="id-14" data-tag="website" data-type="map"><a href="#"><img src="images/Oakland_Voting.png" width="281px" height="191px" /><center><p>Oakland Voting</p></center></a></li>
+                </ul>
+                <!--<p>Oakland Voting</p>-->    
+              </div><!-- /span4 -->
+
+<div class="span4">
+                <ul id="bl-work-items" style="list-style: none;">
+                  <li data-panel="panel-16" class="item" data-id="id-16" data-tag="website" data-type="map"><a href="#"><img src="images/Collisions_Story.png" width="281px" height="191px" /><center><p>A Story of Reported Bicycle Collions in San Francisco</p></center></a></li>
                 </ul>
                 <!--<p>Hipster Unite</p>-->    
               </div><!-- /span4 -->
@@ -769,10 +776,10 @@ frameborder="0" scrolling="no"></iframe></div>
 							<!--<img src="images/Collisions.png" />-->
 							<!--<br />-->
 <div><iframe width="100%" height="450px" frameborder="0" src="https://naulston.cartodb.com/viz/0e768014-466f-11e4-a794-0e853d047bba/embed_map" allowfullscreen webkitallowfullscreen mozallowfullscreen oallowfullscreen msallowfullscreen></iframe></div>
-							<h4>Project Overview</h4>
+							<h4>Project Overview / <a href="https://naulston.cartodb.com/viz/0e768014-466f-11e4-a794-0e853d047bba/embed_map">See Full Map</a> / <a href="https://www.academia.edu/28269420/Eliminating_Bicycle_Collisions_Vision_Zero_in_the_City_of_San_Francisco">See Full Report</a></h4>
 							<p>San Francisco Bike Collisions from 2012</p>
 							<h4>Project Details</h4>
-							<p>In an attempt to reduce the 1.7 reported collisions per day involving a cyclist in the City of San Francisco, we developed this interactive map that can assist engineers, scientists, planners, politicians, and citizens design streets that are less confusing, hectic, and most significantly dangerous for those that try to negotiate them.<a href="https://naulston.cartodb.com/viz/0e768014-466f-11e4-a794-0e853d047bba/embed_map">See Full Map</a></p>
+							<p>In an attempt to reduce the 1.7 reported collisions per day involving a cyclist in the City of San Francisco, we developed this interactive map that can assist engineers, scientists, planners, politicians, and citizens design streets that are less confusing, hectic, and most significantly dangerous for those that try to negotiate them.<a href="https://naulston.cartodb.com/viz/0e768014-466f-11e4-a794-0e853d047bba/embed_map">See Full Map</a> <a href="https://www.academia.edu/28269420/Eliminating_Bicycle_Collisions_Vision_Zero_in_the_City_of_San_Francisco">See Full Report</a></p> 
 							</div><!-- /span8 -->
 						</div><!-- /row-fluid -->	
 					</div><!-- /panel7 -->
@@ -783,7 +790,7 @@ frameborder="0" scrolling="no"></iframe></div>
 							<!--<img src="images/VITASite.png" />-->
 							<!--<br />-->
 <div><iframe width="100%" height="350px" frameborder="0" src="http://www.arcgis.com/apps/LocalPerspective/index.html?appid=17c9230c6e5043b5b63f275324636e7c" allowfullscreen webkitallowfullscreen mozallowfullscreen oallowfullscreen msallowfullscreen></iframe></div>
-							<h4>Project Overview</h4>
+							<h4>Project Overview / <a href="http://www.arcgis.com/apps/LocalPerspective/index.html?appid=17c9230c6e5043b5b63f275324636e7c">See Full Map</a></h4>
 							<p>VITA/EITC Tax Preparation Sites</p>
 							<h4>Project Details</h4>
 							<p>The costs associated with private income tax preparation site render them inaccessible to low-income individuals and families. We designed a map that allows users in the City of Oakland to see the locations of where they can get their taxes prepared for free. The map was also developed to for ease to be embedded in website of any partnering organizations.<a href="http://www.arcgis.com/apps/LocalPerspective/index.html?appid=17c9230c6e5043b5b63f275324636e7c">See Full Map</a></p>
@@ -797,7 +804,7 @@ frameborder="0" scrolling="no"></iframe></div>
               <!--<img src="images/VITASite.png" />-->
               <!--<br />-->
 <div><iframe width="100%" height="450px" frameborder="0" src="http://www.arcgis.com/apps/SummaryViewer/index.html?appid=3544382ab4ce4153b32a5b7cc8c43943" allowfullscreen webkitallowfullscreen mozallowfullscreen oallowfullscreen msallowfullscreen></iframe></div>
-              <h4>Project Overview</h4>
+              <h4>Project Overview / <a href="http://www.arcgis.com/apps/SummaryViewer/index.html?appid=3544382ab4ce4153b32a5b7cc8c43943">See Full Map</a></h4>
               <p>Oakland Land Use by City Council District</p>
               <h4>Project Details</h4>
               <p>City Council District representatives serve the residents in a specific geographic area.  These geographies are drawn with different motivations, but the elected officials still have the responsibility to have the best interests of their constituents in mind in their decision making process. The interactive Oakland Land Use Map provides a tool for politicians, governmental agencies, and the public to examine the concentrations of land use types through the city.  The map presents a count of parcels that have been assigned for the different types of land uses; Commercial, Exempt, Industrial, Institutional, Residential, Unknown, and Vacant parcels. Each district was ranked by the count and area dedicated to each land use type. A user can see the number of parcels for each use type at different zoom levels on the map. This map is a powerful tool and was designed for ease of use and understanding.<a href="http://www.arcgis.com/apps/SummaryViewer/index.html?appid=3544382ab4ce4153b32a5b7cc8c43943">See Full Map</a></p>
@@ -811,11 +818,11 @@ frameborder="0" scrolling="no"></iframe></div>
               <!--<img src="images/VITASite.png" />-->
               <!--<br />-->
 <div><iframe width="100%" height="75%" frameborder="0" src="images/Oakland_Impact_Zone_Parcels.jpg" allowfullscreen webkitallowfullscreen mozallowfullscreen oallowfullscreen msallowfullscreen></iframe></div>
-              <h4>Project Overview</h4>
+              <h4>Project Overview / <a href="https://www.academia.edu/s/5dcb6c396a?source=link">See Full Report </a></h4>
               <p>Potential Oil Spill Site in the City of Oakland</p>
               <h4>Project Details</h4>
               <p>There is a current blind spot in the environmental justice movement.  Even though it ensuring that all people in the USA enjoy the same degree of protection from both environmental and health hazards no matter what community they live, learn, worship, and work in is a cornerstone of the US Environmental Protection Agency (EPA), they have failed to respond to the major emerging environmental hazard of crude oil spills due to train derailment. <br> We analyzed the potential impact of a derailment of a train transporting oil in the City of Oakland, California. This project was designed to provide a clear impression to the governing bodies responsible for ensuring environmental justice, US EPA, California Environmental Potential Agency and local jurisdictional bodies, of the potential disaster in the City of Oakland.<br> We have created two maps that demonstrate the potential impact of the derailment of a train carrying oil through the City of Oakland California. The first map shows the areas that are vulnerable for the entire city, while the second map lays out a scenario of a theoretical derailment site.
-.<a href="https://www.academia.edu/s/5dcb6c396a?source=link">See Full DRAFT Report </a></p>
+.<a href="https://www.academia.edu/s/5dcb6c396a?source=link">See Full Report </a></p>
               </div><!-- /span8 -->
             </div><!-- /row-fluid --> 
           </div><!-- /panel10 -->
@@ -826,7 +833,7 @@ frameborder="0" scrolling="no"></iframe></div>
               <!--<img src="images/VITASite.png" />-->
               <!--<br />-->
 <div><iframe width="100%" height="75%" frameborder="0" src="images/SF_Bike_Infrastructure5.jpg" allowfullscreen webkitallowfullscreen mozallowfullscreen oallowfullscreen msallowfullscreen></iframe></div>
-              <h4>Project Overview</h4>
+              <h4>Project Overview/<a href="https://www.academia.edu/18944953">See Full DRAFT Report </a></h4>
               <p>Disparities in the Current San Francisco Bicycle Infrastructure</p>
               <h4>Project Details</h4>
               <p>Bicycling is an inexpensive mode of transportation, however in a biking mecca like San Francisco the question arises if the bike resources are equalitably distributed throughout the city.  <br>  Bicis Del Pueblo, a bike start-up co-operative bike shop based in the Excelsior neighborhood, views the inability to address the biking issues in District 11 and the Excelsior neighborhood as evidence they have not been committed to building transportation equity.  Bicis Del Pueblo will demonstrate, through the most current available data, how the City government has ignored the communities we serve as they allocate financial and material investments for bike infrastructure throughout the City.<br>
@@ -842,7 +849,7 @@ frameborder="0" scrolling="no"></iframe></div>
               <!--<img src="images/VITASite.png" />-->
               <!--<br />-->
 <div><iframe width="100%" height="450px" frameborder="0" src="http://www.arcgis.com/apps/MapSeries/index.html?appid=fd38af165f9c449283a60b0308e75c5f" allowfullscreen webkitallowfullscreen mozallowfullscreen oallowfullscreen msallowfullscreen></iframe></div>
-              <h4>Project Overview</h4>
+              <h4>Project Overview / <a href="http://www.arcgis.com/apps/MapSeries/index.html?appid=fd38af165f9c449283a60b0308e75c5f"> Full Project </a></h4>
               <p>Miley Maps Key Indicators</p>
               <h4>Project Details</h4>
               <p>To examine the existing assets and issues in three tracts that have been identified in the 4th Supervisorial District of Alameda County we created a series of maps that present the key indicators identified by Supervisor Miley. These highlighted tracts have been targeted for additional resources in order to improve the current outcomes. These interactive maps allow users to examine the current situation and deploy the appropriate resources.<br>
@@ -870,7 +877,7 @@ frameborder="0" scrolling="no"></iframe></div>
               <!--<img src="images/VITASite.png" />-->
               <!--<br />-->
 <div><iframe width="100%" height="450px" frameborder="0" src="http://www.arcgis.com/apps/CompareAnalysis/index.html?appid=1fcbe19cbbd54049a8203e4be8b7b1ff" allowfullscreen webkitallowfullscreen mozallowfullscreen oallowfullscreen msallowfullscreen></iframe></div>
-              <h4>Project Overview</h4>
+              <h4>Project Overview / <a href="https://www.academia.edu/18944953"> Full Report </a></h4>
               <p>Mosswood Park Access</p>
               <h4>Project Details</h4>
               <p>To examine the existing assets and issues in three tracts that have been identified in the 4th Supervisorial District of Alameda County we created a series of maps that present the key indicators identified by Supervisor Miley. These highlighted tracts have been targeted for additional resources in order to improve the current outcomes. These interactive maps allow users to examine the current situation and deploy the appropriate resources.<br>
@@ -887,13 +894,12 @@ frameborder="0" scrolling="no"></iframe></div>
               <!--<img src="images/VITASite.png" />-->
               <!--<br />-->
 <div><iframe width="100%" height="450px" frameborder="0" src="http://www.arcgis.com/apps/CompareAnalysis/index.html?appid=7ab9fe2121fb40f39144d44dbe8ce053" allowfullscreen webkitallowfullscreen mozallowfullscreen oallowfullscreen msallowfullscreen></iframe></div>
-              <h4>Project Overview</h4>
+              <h4>Project Overview / <a href="  "> Full Report </a></h4>
               <p>City of Oakland, CA Voting</p>
               <h4>Project Details</h4>
-              <p>To examine the existing assets and issues in three tracts that have been identified in the 4th Supervisorial District of Alameda County we created a series of maps that present the key indicators identified by Supervisor Miley. These highlighted tracts have been targeted for additional resources in order to improve the current outcomes. These interactive maps allow users to examine the current situation and deploy the appropriate resources.<br>
-
-              The data shows the City has yet to make an equitable investment in District 11 or the Excelsior neighborhood as it pertains to bike parking, racks, lanes, paths, routes, share stations, and other infrastructure projects.
-.<a href="https://www.academia.edu/18944953">See Full DRAFT Report </a></p>
+              <p>An comparative examination of the mayoral elections in the City of Oakland in the years 2010 and 2014.  We looked at how the results of these elections ended up with a different public sentiment for each mayor.<br>
+                We used this example to examine that elections say about the voting public and then recommend steps that can be taken to improve how elections are conducted in the United States without greatly increasing the cost of elections.
+.<a href="  ">See Full DRAFT Report </a></p>
               </div><!-- /span8 -->
             </div><!-- /row-fluid --> 
           </div><!-- /panel14 -->
@@ -904,17 +910,31 @@ frameborder="0" scrolling="no"></iframe></div>
               <!--<img src="images/VITASite.png" />-->
               <!--<br />-->
 <div><iframe width="100%" height="450px" frameborder="0" src="images/Community_Well.jpg" allowfullscreen webkitallowfullscreen mozallowfullscreen oallowfullscreen msallowfullscreen></iframe></div>
-              <h4>Project Overview</h4>
-              <p>City of Oakland, CA Voting</p>
+              <h4>Project Overview / <a href="http://www.communitywellsf.com"> Full Site</a></h4>
+              <p>Community Well Website</p>
               <h4>Project Details</h4>
-              <p>To examine the existing assets and issues in three tracts that have been identified in the 4th Supervisorial District of Alameda County we created a series of maps that present the key indicators identified by Supervisor Miley. These highlighted tracts have been targeted for additional resources in order to improve the current outcomes. These interactive maps allow users to examine the current situation and deploy the appropriate resources.<br>
-
-              The data shows the City has yet to make an equitable investment in District 11 or the Excelsior neighborhood as it pertains to bike parking, racks, lanes, paths, routes, share stations, and other infrastructure projects.
-.<a href="https://www.academia.edu/18944953">See Full DRAFT Report </a></p>
+              <p>Resdesigned the site for Community Well which is a holistic health services resource for individuals, couple, and families of all backgrounds in the Excelsior District.  They Community Well is a multifaceted, non-hierarchical organization offering compassionate support, real-life education and skill-building.<br>
+                As part of the resdesign I taught Community Well how to maintain thier own site.  I supported this effort with redesigning their website and have an standing offer to assist any of their practitioners to design and teach them how to maintain thier own personal sites.</p>
               </div><!-- /span8 -->
             </div><!-- /row-fluid --> 
-          </div><!-- /panel14 -->
+          </div><!-- /panel15 -->
 
+<div data-panel="panel-16">
+            <div class="row-fluid">
+              <div class="span8 offset2 tweak">
+              <!--<img src="images/VITASite.png" />-->
+              <!--<br />-->
+<div><iframe width="100%" height="450px" frameborder="0" src="http://www.arcgis.com/apps/MapSeries/index.html?appid=d0368283d8714aa8abee5e2ba9ba4736" allowfullscreen webkitallowfullscreen mozallowfullscreen oallowfullscreen msallowfullscreen></iframe></div>
+              <h4>Project Overview / <a href="http://www.arcgis.com/apps/MapSeries/index.html?appid=d0368283d8714aa8abee5e2ba9ba4736"> Full Map </a>/ <a href="https://www.academia.edu/28269420/Eliminating_Bicycle_Collisions_Vision_Zero_in_the_City_of_San_Francisco"> Full Report </a></h4>
+              <p>A Story of Reported Bicycle Collisions in San Francisco</p>
+              <h4>Project Details</h4>
+              <p>Interactive maps.<br>
+
+              The data shows the City has yet to make an equitable investment in District 11 or the Excelsior neighborhood as it pertains to bike parking, racks, lanes, paths, routes, share stations, and other infrastructure projects.
+.<a href="https://www.academia.edu/28269420/Eliminating_Bicycle_Collisions_Vision_Zero_in_the_City_of_San_Francisco">See Full DRAFT Report </a></p>
+              </div><!-- /span8 -->
+            </div><!-- /row-fluid --> 
+          </div><!-- /panel16 -->
 					<nav>
 						<span class="bl-next-work">&gt; Next Project</span>
 						<span class="bl-icon bl-icon-close"></span>
