--- a/index.html
+++ b/index.html
@@ -406,7 +406,7 @@ Presented strategic plan on how to leverage private funds, investment and mentor
 
 <div class="span4">
                 <ul id="bl-work-items" style="list-style: none;">
-                  <li data-panel="panel-17" class="item" data-id="id-17" data-tag="website" data-type="web"><a href="#"><img src="images/blank.png" width="281px" height="191px" /><center><p>Place Holder</p></center></a></li>
+                  <li data-panel="panel-17" class="item" data-id="id-17" data-tag="website" data-type="web"><a href="#"><img src="images/blank.png" width="281px" height="191px" /><center><p> </p></center></a></li>
                 </ul>
                 <!--<p>Hipster Unite</p>-->    
               </div><!-- /span4 -->
@@ -418,18 +418,25 @@ Presented strategic plan on how to leverage private funds, investment and mentor
                 <!--<p>Potential Crude Oil Spill</p>-->  
               </div><!-- /span4 -->
 
-<div class="span4">
-                <ul id="bl-work-items">
-                  <li data-panel="panel-11" class="item" data-id="id-10" data-tag="map" data-type="map"><a href="#"><img src="images/SF_Bike_Infrastructure5.jpg" width="281px" height="191px" /><center><p>San Francisco Bicycle Infrastructure: Is it Equitably Distributed?</p></center></a></li>
+              <div class="span4">
+                <ul id="bl-work-items" style="list-style: none;">
+                  <li data-panel="panel-12" class="item" data-id="id-12" data-tag="website" data-type="map"><a href="#"><img src="images/Miley_Map.png" width="281px" height="191px" /><center><p>4th Supervisoral District Maps</p></center></a></li>
                 </ul>
-                <!--<p>San Francisco Bicycle Infrastructure</p>-->  
+                <!--<p>Miley Maps</p>-->    
               </div><!-- /span4 -->
 
               <div class="span4">
                 <ul id="bl-work-items" style="list-style: none;">
-                  <li data-panel="panel-12" class="item" data-id="id-12" data-tag="website" data-type="map"><a href="#"><img src="images/Miley_Map.png" width="281px" height="191px" /><center><p>Miley Maps</p></center></a></li>
+                  <li data-panel="panel-17" class="item" data-id="id-17" data-tag="website" data-type="web"><a href="#"><img src="images/blank.png" width="281px" height="191px" /><center><p> </p></center></a></li>
                 </ul>
-                <!--<p>Miley Maps</p>-->    
+                <!--<p>Hipster Unite</p>-->    
+              </div><!-- /span4 -->
+
+              <div class="span4">
+                <ul id="bl-work-items" style="list-style: none;">
+                  <li data-panel="panel-17" class="item" data-id="id-17" data-tag="website" data-type="web"><a href="#"><img src="images/blank.png" width="281px" height="191px" /><center><p> </p></center></a></li>
+                </ul>
+                <!--<p>Hipster Unite</p>-->    
               </div><!-- /span4 -->
 
 <div class="span4">
@@ -447,8 +454,15 @@ Presented strategic plan on how to leverage private funds, investment and mentor
               </div><!-- /span4 -->
 
 <div class="span4">
+                <ul id="bl-work-items">
+                  <li data-panel="panel-11" class="item" data-id="id-10" data-tag="map" data-type="map"><a href="#"><img src="images/SF_Bike_Infrastructure5.jpg" width="281px" height="191px" /><center><p>San Francisco Bicycle Infrastructure: Is it Equitably Distributed?</p></center></a></li>
+                </ul>
+                <!--<p>San Francisco Bicycle Infrastructure</p>-->  
+              </div><!-- /span4 -->
+
+<div class="span4">
                 <ul id="bl-work-items" style="list-style: none;">
-                  <li data-panel="panel-16" class="item" data-id="id-16" data-tag="website" data-type="map"><a href="#"><img src="images/Collisions_Story.png" width="281px" height="191px" /><center><p>A Story of Reported Bicycle Collions in San Francisco</p></center></a></li>
+                  <li data-panel="panel-16" class="item" data-id="id-16" data-tag="website" data-type="map"><a href="#"><img src="images/Collision_Story.png" width="281px" height="191px" /><center><p>A Story of Reported Bicycle Collions in San Francisco</p></center></a></li>
                 </ul>
                 <!--<p>Hipster Unite</p>-->    
               </div><!-- /span4 -->
@@ -817,7 +831,7 @@ frameborder="0" scrolling="no"></iframe></div>
               <div class="span8 offset2 tweak">
               <!--<img src="images/VITASite.png" />-->
               <!--<br />-->
-<div><iframe width="100%" height="75%" frameborder="0" src="images/Oakland_Impact_Zone_Parcels.jpg" allowfullscreen webkitallowfullscreen mozallowfullscreen oallowfullscreen msallowfullscreen></iframe></div>
+<div><iframe width="100%" height="450px" align="middle" frameborder="0" src="images/Oakland_Impact_Zone_Parcels.jpg" allowfullscreen webkitallowfullscreen mozallowfullscreen oallowfullscreen msallowfullscreen></iframe></div>
               <h4>Project Overview / <a href="https://www.academia.edu/s/5dcb6c396a?source=link">See Full Report </a></h4>
               <p>Potential Oil Spill Site in the City of Oakland</p>
               <h4>Project Details</h4>
