order of projects
and alignment of images

--- a/index.html
+++ b/index.html
@@ -412,32 +412,12 @@ Presented strategic plan on how to leverage private funds, investment and mentor
               </div><!-- /span4 -->
 
 <div class="span4">
-                <ul id="bl-work-items">
-                  <li data-panel="panel-10" class="item" data-id="id-10" data-tag="map" data-type="map"><a href="#"><img src="images/Oakland_Impact_Zone_Parcels.jpg" width="281px" height="191px" /><center><p>Potential Crude Oil Spill in the City of Oakland</p></center></a></li>
+                <ul id="bl-work-items" style="list-style: none;">
+                  <li data-panel="panel-14" class="item" data-id="id-14" data-tag="website" data-type="map"><a href="#"><img src="images/Oakland_Voting.png" width="281px" height="191px" /><center><p>Oakland Voting</p></center></a></li>
                 </ul>
-                <!--<p>Potential Crude Oil Spill</p>-->  
+                <!--<p>Oakland Voting</p>-->    
               </div><!-- /span4 -->
 
-              <div class="span4">
-                <ul id="bl-work-items" style="list-style: none;">
-                  <li data-panel="panel-12" class="item" data-id="id-12" data-tag="website" data-type="map"><a href="#"><img src="images/Miley_Map.png" width="281px" height="191px" /><center><p>4th Supervisoral District Maps</p></center></a></li>
-                </ul>
-                <!--<p>Miley Maps</p>-->    
-              </div><!-- /span4 -->
-
-              <div class="span4">
-                <ul id="bl-work-items" style="list-style: none;">
-                  <li data-panel="panel-17" class="item" data-id="id-17" data-tag="website" data-type="web"><a href="#"><img src="images/blank.png" width="281px" height="191px" /><center><p> </p></center></a></li>
-                </ul>
-                <!--<p>Hipster Unite</p>-->    
-              </div><!-- /span4 -->
-
-              <div class="span4">
-                <ul id="bl-work-items" style="list-style: none;">
-                  <li data-panel="panel-17" class="item" data-id="id-17" data-tag="website" data-type="web"><a href="#"><img src="images/blank.png" width="281px" height="191px" /><center><p> </p></center></a></li>
-                </ul>
-                <!--<p>Hipster Unite</p>-->    
-              </div><!-- /span4 -->
 
 <div class="span4">
                 <ul id="bl-work-items" style="list-style: none;">
@@ -448,10 +428,45 @@ Presented strategic plan on how to leverage private funds, investment and mentor
 
               <div class="span4">
                 <ul id="bl-work-items" style="list-style: none;">
-                  <li data-panel="panel-14" class="item" data-id="id-14" data-tag="website" data-type="map"><a href="#"><img src="images/Oakland_Voting.png" width="281px" height="191px" /><center><p>Oakland Voting</p></center></a></li>
+                  <li data-panel="panel-17" class="item" data-id="id-17" data-tag="website" data-type="web"><a href="#"><img src="images/blank.png" width="281px" height="191px" /><center><p> </p></center></a></li>
                 </ul>
-                <!--<p>Oakland Voting</p>-->    
+                <!--<p>Hipster Unite</p>-->    
               </div><!-- /span4 -->
+
+              <div class="span4">
+                <ul id="bl-work-items" style="list-style: none;">
+                  <li data-panel="panel-17" class="item" data-id="id-17" data-tag="website" data-type="web"><a href="#"><img src="images/blank.png" width="281px" height="191px" /><center><p> </p></center></a></li>
+                </ul>
+                <!--<p>Hipster Unite</p>-->    
+              </div><!-- /span4 -->
+
+             <div class="span4">
+                <ul id="bl-work-items" style="list-style: none;">
+                  <li data-panel="panel-12" class="item" data-id="id-12" data-tag="website" data-type="map"><a href="#"><img src="images/Miley_Map.png" width="281px" height="191px" /><center><p>4th Supervisoral District</p></center></a></li>
+                </ul>
+                <!--<p>Miley Maps</p>-->    
+              </div><!-- /span4 -->
+
+<div class="span4">
+                <ul id="bl-work-items">
+                  <li data-panel="panel-10" class="item" data-id="id-10" data-tag="map" data-type="map"><a href="#"><img src="images/Oakland_Impact_Zone_Parcels.jpg" width="281px" height="191px" /><center><p>Potential Crude Oil Spill in the City of Oakland</p></center></a></li>
+                </ul>
+                <!--<p>Potential Crude Oil Spill</p>-->  
+              </div><!-- /span4 -->
+
+              <div class="span4">
+                <ul id="bl-work-items" style="list-style: none;">
+                  <li data-panel="panel-17" class="item" data-id="id-17" data-tag="website" data-type="web"><a href="#"><img src="images/blank.png" width="281px" height="191px" /><center><p> </p></center></a></li>
+                </ul>
+                <!--<p>Hipster Unite</p>-->    
+              </div><!-- /span4 -->
+
+              <div class="span4">
+                <ul id="bl-work-items" style="list-style: none;">
+                  <li data-panel="panel-17" class="item" data-id="id-17" data-tag="website" data-type="web"><a href="#"><img src="images/blank.png" width="281px" height="191px" /><center><p> </p></center></a></li>
+                </ul>
+                <!--<p>Hipster Unite</p>-->    
+              </div><!-- /span4 -->          
 
 <div class="span4">
                 <ul id="bl-work-items">
@@ -831,7 +846,7 @@ frameborder="0" scrolling="no"></iframe></div>
               <div class="span8 offset2 tweak">
               <!--<img src="images/VITASite.png" />-->
               <!--<br />-->
-<div><iframe width="100%" height="450px" align="middle" frameborder="0" src="images/Oakland_Impact_Zone_Parcels.jpg" allowfullscreen webkitallowfullscreen mozallowfullscreen oallowfullscreen msallowfullscreen></iframe></div>
+<div><iframe width="100%" height="350px" frameborder="0" src="images/Oakland_Impact_Zone_Parcels.jpg" align="middle" allowfullscreen webkitallowfullscreen mozallowfullscreen oallowfullscreen msallowfullscreen></iframe></div>
               <h4>Project Overview / <a href="https://www.academia.edu/s/5dcb6c396a?source=link">See Full Report </a></h4>
               <p>Potential Oil Spill Site in the City of Oakland</p>
               <h4>Project Details</h4>
@@ -846,7 +861,7 @@ frameborder="0" scrolling="no"></iframe></div>
               <div class="span8 offset2 tweak">
               <!--<img src="images/VITASite.png" />-->
               <!--<br />-->
-<div><iframe width="100%" height="75%" frameborder="0" src="images/SF_Bike_Infrastructure5.jpg" allowfullscreen webkitallowfullscreen mozallowfullscreen oallowfullscreen msallowfullscreen></iframe></div>
+<div><iframe width="100%" height="450px" frameborder="0" src="images/SF_Bike_Infrastructure5.jpg" align="middle" allowfullscreen webkitallowfullscreen mozallowfullscreen oallowfullscreen msallowfullscreen></iframe></div>
               <h4>Project Overview/<a href="https://www.academia.edu/18944953">See Full DRAFT Report </a></h4>
               <p>Disparities in the Current San Francisco Bicycle Infrastructure</p>
               <h4>Project Details</h4>
