--- a/index.html
+++ b/index.html
@@ -428,16 +428,16 @@ Presented strategic plan on how to leverage private funds, investment and mentor
 
               <div class="span4">
                 <ul id="bl-work-items" style="list-style: none;">
-                  <li data-panel="panel-17" class="item" data-id="id-17" data-tag="website" data-type="web"><a href="#"><img src="images/blank.png" width="281px" height="191px" /><center><p>Holder</p></center></a></li>
+                  <li data-panel="panel-17" class="item" data-id="id-17" data-tag="website" data-type="web"><a href="#"><img src="images/blank.png" width="281px" height="191px" /><center><p></p></center></a></li>
                 </ul>
-                <!--<p>Hipster Unite</p>-->    
+                <!--<p>Holder</p>-->    
               </div><!-- /span4 -->
 
               <div class="span4">
                 <ul id="bl-work-items" style="list-style: none;">
-                  <li data-panel="panel-17" class="item" data-id="id-17" data-tag="website" data-type="web"><a href="#"><img src="images/blank.png" width="281px" height="191px" /><center><p>Holder</p></center></a></li>
+                  <li data-panel="panel-17" class="item" data-id="id-17" data-tag="website" data-type="web"><a href="#"><img src="images/blank.png" width="281px" height="191px" /><center><p></p></center></a></li>
                 </ul>
-                <!--<p>Hipster Unite</p>-->    
+                <!--<p>Holder</p>-->    
               </div><!-- /span4 -->
 
              <div class="span4">
@@ -449,28 +449,28 @@ Presented strategic plan on how to leverage private funds, investment and mentor
 
 <div class="span4">
                 <ul id="bl-work-items">
-                  <li data-panel="panel-10" class="item" data-id="id-10" data-tag="map" data-type="map"><a href="#"><img src="images/Oakland_Impact_Zone_Parcels.jpg" width="281px" height="191px" /><center><p>Potential Crude Oil Spill in the City of Oakland</p></center></a></li>
+                  <li data-panel="panel-10" class="item" data-id="id-10" data-tag="map" data-type="map"><a href="#"><img src="images/Oakland_Impact_Zone_Parcels.jpg" width="281px" height="169px" /><center><p>Potential Crude Oil Spill in the City of Oakland</p></center></a></li>
                 </ul>
                 <!--<p>Potential Crude Oil Spill</p>-->  
               </div><!-- /span4 -->
 
               <div class="span4">
                 <ul id="bl-work-items" style="list-style: none;">
-                  <li data-panel="panel-17" class="item" data-id="id-17" data-tag="website" data-type="web"><a href="#"><img src="images/blank.png" width="281px" height="191px" /><center><p>Holder</p></center></a></li>
+                  <li data-panel="panel-17" class="item" data-id="id-17" data-tag="website" data-type="web"><a href="#"><img src="images/blank.png" width="281px" height="191px" /><center><p></p></center></a></li>
                 </ul>
-                <!--<p>Hipster Unite</p>-->    
+                <!--<p>Holder</p>-->    
               </div><!-- /span4 -->
 
               <div class="span4">
                 <ul id="bl-work-items" style="list-style: none;">
-                  <li data-panel="panel-17" class="item" data-id="id-17" data-tag="website" data-type="web"><a href="#"><img src="images/blank.png" width="281px" height="191px" /><center><p>Holder</p></center></a></li>
+                  <li data-panel="panel-17" class="item" data-id="id-17" data-tag="website" data-type="web"><a href="#"><img src="images/blank.png" width="281px" height="191px" /><center><p></p></center></a></li>
                 </ul>
-                <!--<p>Hipster Unite</p>-->    
+                <!--<p>Holder</p>-->    
               </div><!-- /span4 -->          
 
 <div class="span4">
                 <ul id="bl-work-items">
-                  <li data-panel="panel-11" class="item" data-id="id-10" data-tag="map" data-type="map"><a href="#"><img src="images/SF_Bike_Infrastructure5.jpg" width="281px" height="191px" /><center><p>San Francisco Bicycle Infrastructure: Is it Equitably Distributed?</p></center></a></li>
+                  <li data-panel="panel-11" class="item" data-id="id-11" data-tag="map" data-type="map"><a href="#"><img src="images/SF_Bike_Infrastructure5.jpg" width="281px" height="191px" /><center><p>San Francisco Bicycle Infrastructure: Is it Equitably Distributed?</p></center></a></li>
                 </ul>
                 <!--<p>San Francisco Bicycle Infrastructure</p>-->  
               </div><!-- /span4 -->
@@ -479,7 +479,7 @@ Presented strategic plan on how to leverage private funds, investment and mentor
                 <ul id="bl-work-items" style="list-style: none;">
                   <li data-panel="panel-16" class="item" data-id="id-16" data-tag="website" data-type="map"><a href="#"><img src="images/Collision_Story.png" width="281px" height="191px" /><center><p>A Story of Reported Bicycle Collions in San Francisco</p></center></a></li>
                 </ul>
-                <!--<p>Hipster Unite</p>-->    
+                <!--<p>Story of Bike Collisions</p>-->    
               </div><!-- /span4 -->
 
             </div><!-- /row-fluid -->
