--- a/index.html
+++ b/index.html
@@ -328,49 +328,49 @@ Presented strategic plan on how to leverage private funds, investment and mentor
 <div class="row-fluid">
 
 <div class="span4">
-                <ul id="bl-work-items">
+                <ul id="bl-work-items" style="list-style: none;">
                   <li data-panel="panel-7" class="item" data-id="id-2" data-tag="map" data-type="map"><a href="#"><img src="images/Collisions.png" width="281px" height="191px" /><center><p>Bike Collisions</p></center></a></li>
                 </ul>
                 <!--<p>Collisions</p>-->       
               </div><!-- /span4 -->
 
               <div class="span4">
-                <ul id="bl-work-items">
+                <ul id="bl-work-items" style="list-style: none;">
                   <li data-panel="panel-5" class="item" data-id="id-3" data-tag="map" data-type="map"><a href="#"><img src="images/OSNIScreen.png" width="281px" height="191px" /><center><p>OSNI Map</p></center></a></li>
                 </ul>
                 <!--<p>OSNI Map</p>-->
               </div><!-- /span4 -->
 
 <div class="span4">
-                <ul id="bl-work-items">
+                <ul id="bl-work-items" style="list-style: none;">
                   <li data-panel="panel-3" class="item" data-id="id-4" data-tag="website" data-type="web"><a href="#"><img src="images/BeaconSite.png" width="281px" height="191px" /><center><p>Bayview Beacon Site</p></center></a></li>
                 </ul>
                 <!--<p>Bayview Beacon Site</p>-->        
               </div><!-- /span4 -->
 
               <div class="span4">
-                <ul id="bl-work-items">
+                <ul id="bl-work-items" style="list-style: none;">
                   <li data-panel="panel-2" class="item" data-id="id-5" data-tag="website" data-type="web"><a href="#"><img src="images/MappingSite.png" width="281px" height="191px" /><center><p>Mapping the Bay Area</p></center></a></li>
                 </ul>
                 <!--<p>Mapping the Bay Area</p>-->      
               </div><!-- /span4 -->
 
 <div class="span4">
-                <ul id="bl-work-items">
+                <ul id="bl-work-items" style="list-style: none;">
                   <li data-panel="panel-6" class="item" data-id="id-6" data-tag="map" data-type="map"><a href="#"><img src="images/EBTSite.png" width="281px" height="191px" /><center><p>EBT Map</p></center></a></li>
                 </ul>
                 <!--<p>EBT Map</p>-->       
               </div><!-- /span4 -->
 
               <div class="span4">
-                <ul id="bl-work-items">
+                <ul id="bl-work-items" style="list-style: none;">
                   <li data-panel="panel-4" class="item" data-id="id-8" data-tag="map" data-type="map"><a href="#"><img src="images/OaklandRingMap.png" width="281px" height="191px" /><center><p>Oakland Ring Map</p></center></a></li>
                 </ul>
                 <!--<p>Oakland Ring Map</p>-->
               </div><!-- /span4 -->
 
 <div class="span4">
-                <ul id="bl-work-items">
+                <ul id="bl-work-items" style="list-style: none;">
                   <li data-panel="panel-1" class="item" data-id="id-7" data-tag="website" data-type="web"><a href="#"><img src="images/BicisSite.png" width="281px" height="191px" /><center><p>Bicis Del Pueblo</p></center></a></li>
                 </ul>
                 <!--<p>Bicis Del Pueblo</p>-->   
@@ -384,7 +384,7 @@ Presented strategic plan on how to leverage private funds, investment and mentor
               </div><!-- /span4 -->
 
 <div class="span4">
-                <ul id="bl-work-items">
+                <ul id="bl-work-items" style="list-style: none;">
                   <li data-panel="panel-8" class="item" data-id="id-9" data-tag="map" data-type="map"><a href="#"><img src="images/VITASite.png" width="281px" height="191px" /><center><p>VITA/EITC Tax Prep Sites</p></center></a></li>
                 </ul>
                 <!--<p>VITA/EITC Tax Prep Sites</p>-->           
@@ -428,14 +428,14 @@ Presented strategic plan on how to leverage private funds, investment and mentor
 
               <div class="span4">
                 <ul id="bl-work-items" style="list-style: none;">
-                  <li data-panel="panel-17" class="item" data-id="id-17" data-tag="website" data-type="web"><a href="#"><img src="images/blank.png" width="281px" height="191px" /><center><p></p></center></a></li>
+                  <li data-panel="panel-17" class="item" data-id="id-17" data-tag="website" data-type="web"><a href="#"><img src="images/blank.png" width="281px" height="191px" /><center><p>Hold</p></center></a></li>
                 </ul>
                 <!--<p>Holder</p>-->    
               </div><!-- /span4 -->
 
               <div class="span4">
                 <ul id="bl-work-items" style="list-style: none;">
-                  <li data-panel="panel-17" class="item" data-id="id-17" data-tag="website" data-type="web"><a href="#"><img src="images/blank.png" width="281px" height="191px" /><center><p></p></center></a></li>
+                  <li data-panel="panel-17" class="item" data-id="id-17" data-tag="website" data-type="web"><a href="#"><img src="images/blank.png" width="281px" height="191px" /><center><p>Hold</p></center></a></li>
                 </ul>
                 <!--<p>Holder</p>-->    
               </div><!-- /span4 -->
@@ -448,7 +448,7 @@ Presented strategic plan on how to leverage private funds, investment and mentor
               </div><!-- /span4 -->
 
 <div class="span4">
-                <ul id="bl-work-items">
+                <ul id="bl-work-items" style="list-style: none;">
                   <li data-panel="panel-10" class="item" data-id="id-10" data-tag="map" data-type="map"><a href="#"><img src="images/Oakland_Impact_Zone_Parcels.jpg" width="281px" height="169px" /><center><p>Potential Crude Oil Spill in the City of Oakland</p></center></a></li>
                 </ul>
                 <!--<p>Potential Crude Oil Spill</p>-->  
@@ -456,20 +456,20 @@ Presented strategic plan on how to leverage private funds, investment and mentor
 
               <div class="span4">
                 <ul id="bl-work-items" style="list-style: none;">
-                  <li data-panel="panel-17" class="item" data-id="id-17" data-tag="website" data-type="web"><a href="#"><img src="images/blank.png" width="281px" height="191px" /><center><p></p></center></a></li>
+                  <li data-panel="panel-17" class="item" data-id="id-17" data-tag="website" data-type="web"><a href="#"><img src="images/blank.png" width="281px" height="191px" /><center><p>Hold</p></center></a></li>
                 </ul>
                 <!--<p>Holder</p>-->    
               </div><!-- /span4 -->
 
               <div class="span4">
                 <ul id="bl-work-items" style="list-style: none;">
-                  <li data-panel="panel-17" class="item" data-id="id-17" data-tag="website" data-type="web"><a href="#"><img src="images/blank.png" width="281px" height="191px" /><center><p></p></center></a></li>
+                  <li data-panel="panel-17" class="item" data-id="id-17" data-tag="website" data-type="web"><a href="#"><img src="images/blank.png" width="281px" height="191px" /><center><p>Hold</p></center></a></li>
                 </ul>
                 <!--<p>Holder</p>-->    
               </div><!-- /span4 -->          
 
 <div class="span4">
-                <ul id="bl-work-items">
+                <ul id="bl-work-items" style="list-style: none;">
                   <li data-panel="panel-11" class="item" data-id="id-11" data-tag="map" data-type="map"><a href="#"><img src="images/SF_Bike_Infrastructure5.jpg" width="281px" height="191px" /><center><p>San Francisco Bicycle Infrastructure: Is it Equitably Distributed?</p></center></a></li>
                 </ul>
                 <!--<p>San Francisco Bicycle Infrastructure</p>-->  
