--- a/index.html
+++ b/index.html
@@ -449,7 +449,7 @@ Presented strategic plan on how to leverage private funds, investment and mentor
 
 <div class="span4">
                 <ul id="bl-work-items" style="list-style: none;">
-                  <li data-panel="panel-10" class="item" data-id="id-10" data-tag="map" data-type="map"><a href="#"><img src="images/Oakland_Impact_Zone_Parcels.jpg" width="281px" height="169px" /><center><p>Potential Crude Oil Spill in the City of Oakland</p></center></a></li>
+                  <li data-panel="panel-10" class="item" data-id="id-10" data-tag="map" data-type="map"><a href="#"><img src="images/Oakland_Impact_Zone_Parcels.jpg" width="281px" height="167px" /><center><p>Potential Crude Oil Spill in the City of Oakland</p></center></a></li>
                 </ul>
                 <!--<p>Potential Crude Oil Spill</p>-->  
               </div><!-- /span4 -->
@@ -660,10 +660,10 @@ Presented strategic plan on how to leverage private funds, investment and mentor
 							Group facilitation Certificate
 
 							Programs:
-							Statistics: SPSS, STATA, R, Excel, D3
-							Mapping: ArcGIS, QGIS, Google Earth, Google Maps, Leaflet, CartoDB, Mapbox, OpenStreetMap,
-
-Group facilitation:
+							Statistics: SPSS, STATA, R, Excel, D3, SQL
+							Mapping: ArcGIS, QGIS, Google Earth, Google Maps, Leaflet, CartoDB, Mapbox, OpenStreetMap
+              Group facilitation:
+              Data Vizualization
 						</p><br>
             <hr>
 
